--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-session-knex": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
